--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-composability": "^0.1.3",
     "ember-data": "1.13.15",
+    "ember-devtools": "^4.2.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-key-responder": "^0.4.2",
@@ -44,6 +45,7 @@
     "ember-modal-dialog": "^0.7.7",
     "ember-new-computed": "^1.0.3",
     "ember-radio-button": "^1.0.7",
-    "emberfire": "1.6.3"
+    "emberfire": "1.6.3",
+    "torii": "0.6.1"
   }
 }
