--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
     "firebase": "^2.1.0",
+    "firepad": "~1.3.0",
+    "codemirror": "~5.11",
     "materialize": "~0.97.0"
   }
 }
